Fix invisible #searchresults container screwing up the mobile layout
In the mobile layout, the #searchresults container had negative impact
on the placement of other elements when a search was executed in the
Music app. In this case, the core gives it "display: block" style, and
it affects the placement of other elements even though it's always
hidden by us. Using "position: absolute" prevents it affecting any
other elements.

--- a/css/style-search.css
+++ b/css/style-search.css
@@ -11,6 +11,7 @@
 /* Hide the default results div because we have a custom "filter like" search logic */
 .app-music #searchresults {
 	visibility: hidden;
+	position: absolute;
 	height: 0;
 }
 
